--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -59,6 +59,10 @@ body {
     
 }
 
+.price > h1 {
+    color: var(--Dark-cyan);
+}
+
 .offer {
     text-decoration: line-through;
     width: 100%;
