--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -43,7 +43,7 @@ a:hover {
 }
 
 .card {
-    width: 410px;
+    width: 450px;
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0px 5px 15px var(--Desaturated-blue);
@@ -87,6 +87,10 @@ a:hover {
 .h-text {
     font-weight: 900;
     color: var(--Dark-blue);
+}
+
+.annual-price {
+    font-size: 1.1em;
 }
 
 .proceed,
