coding stats-preview-card-component-main

--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -102,6 +102,9 @@ a:hover {
 .footer {
     display: flex;
     align-items: center;
+	border-top-width: 3px;
+	border-color: yellow;
+	
 }
 
 .footer img {
