--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -50,18 +50,18 @@ h1 {
 
 .content {
     padding: min(3em, 5vw, 10%);
-    flex: 1;
+    width: 100%;
 }
 
 .content > p {
     color: var(--Slightly-transparent-white-1);
 }
 .img {
-    flex: 1;
+    width: 100%;
     background-image: url("images/image-header-desktop.jpg");
     background-size: cover;
     background-blend-mode: multiply;
-    background-color: var(--Soft-violet);
+    background-color: hsl(277, 64%, 61% / 70%);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
