--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -61,7 +61,7 @@ h1 {
     background-image: url("images/image-header-desktop.jpg");
     background-size: cover;
     background-blend-mode: multiply;
-    background-color: hsl(277, 64%, 61% / 70%);
+    background-color: hsla(277, 64%, 61%, 70%);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
