--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -19,7 +19,7 @@ body {
     max-height: 100%;
     color: white;
     font-family: Lexend Deca;
-    font-size: 1.219rem;
+    font-size: 1.15rem;
 }
 
 main {
@@ -31,9 +31,10 @@ main {
     align-items: center;
 }
 
-h1 {
+h1,
+h2 {
     font-family: Inter;
-    font-weight: 700;
+    font-weight: 900;
 }
 
 .purple {
@@ -61,7 +62,7 @@ h1 {
     background-image: url("images/image-header-desktop.jpg");
     background-size: cover;
     background-blend-mode: multiply;
-    background-color: hsla(277, 64%, 61%, 70%);
+    background-color: hsla(277, 64%, 61%, 65%);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -72,12 +73,18 @@ h1 {
     margin-top: 3em;
 }
 
-.info p {
-    color: var(--Slightly-transparent-white-2);
-}
-
 .item > *{
     margin: 0;
+}
+
+h2 {
+    font-size: 1.7rem;
+}
+.item p {
+    color: var(--Slightly-transparent-white-2);
+    text-transform: uppercase;
+    font-size: .75rem;
+    margin-top: .2em;
 }
 
 @media(max-width: 800px){
