--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -11,7 +11,7 @@
 
 body {
     min-height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     background-color: var(--Violet);
     background-image: url("images/bg-desktop.svg");
     background-size: cover;
